Agrego soporte AJAX para listado de usuarios e implementacion de DataTable

--- a/templates/usuario/listar_usuario.html
+++ b/templates/usuario/listar_usuario.html
@@ -1,19 +1,24 @@
 {% extends 'index.html' %}
+{% load static %}
+
 {% block titulo %}
   Listado de usuarios
 {% endblock titulo %}
+
+{% block extracss %}
+<link rel="stylesheet" href="//cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+{% endblock extracss %}
 
 {% block titulo_principal %}
 Listado de Usuarios
 {% endblock titulo_principal %}
 
 {% block body %}
-  {% if object_list %}
-      <table class="table table-striped table-bordered dataTable no-footer">
+
+      <table class="table table-striped table-bordered dataTable no-footer" id="tabla_usuarios">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Nombre de usuario</th>
+            <th>Usuario</th>
             <th>Email</th>
             <th>Nombres</th>
             <th>Apellidos</th>
@@ -22,25 +27,9 @@ Listado de Usuarios
           </tr>
         </thead>
         <tbody>
-          {% for usuario in object_list %}
-          <tr>
-            <td>{{usuario.id}}</td>
-            <td>{{usuario.username}}</td>
-            <td>{{usuario.email}}</td>
-            <td>{{usuario.nombres}}</td>
-            <td>{{usuario.apellidos}}</td>
-            <td>{{usuario.is_admin}}</td>
-
-            <td><a href="{% url 'usuario:editar_usuario' usuario.id %}" class="btn btn-primary">Editar</a>
-            <a class="btn btn-danger" href="{% url 'usuario:eliminar_usuario' usuario.id %}">Eliminar</a></td>
-          </tr>
-          {% endfor %}
         </tbody>
       </table>
-  {% else %}
-    <h1>No existen usuarios registrados</h1>
 
-  {% endif %}
 
   {% if error %}
   <h2>Se ha producido un error:  {{error}}</h2>
@@ -49,3 +38,7 @@ Listado de Usuarios
 
 
 {% endblock body %}
+{% block extrajs %}
+<script src="{% static 'js/usuario/index.js' %}"></script>
+<script src="//cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+{% endblock extrajs %}
