--- a/templates/usuario/listar_usuario.html
+++ b/templates/usuario/listar_usuario.html
@@ -15,6 +15,9 @@ Listado de Usuarios
 
 {% block body %}
 
+      <button type="button" class="btn btn-primary" onclick="abrir_modal_creacion('{% url 'usuario:crear_usuario' %}')">Crear usuario</button>
+      <p></p>
+
       <table class="table table-striped table-bordered dataTable no-footer" id="tabla_usuarios">
         <thead>
           <tr>
@@ -34,6 +37,8 @@ Listado de Usuarios
   {% if error %}
   <h2>Se ha producido un error:  {{error}}</h2>
   {% endif %}
+
+  <div class="modal fade" id="creacion" role="dialog"></div>
 
 
 
