Se agrego libreria sweet alert se agrego funcion general para mostrar errores del form creacion

--- a/templates/index.html
+++ b/templates/index.html
@@ -162,6 +162,8 @@
       <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
       <script src="{% static 'js/main.js' %}"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
       {% block extrajs  %}
       {% endblock extrajs %}
 
