--- a/templates/usuario/crear_usuario.html
+++ b/templates/usuario/crear_usuario.html
@@ -17,6 +17,10 @@
       <div class="modal-footer">
         <button id="boton_creacion" class="btn btn-primary" type="button" onclick="registrar()">Confirmar</button>
       </div>
+
+      <div id="errores_creacion">
+
+      </div>
     </form>
   </div>
 </div>
