Se agrego metodo de edicion y eliminacion de usuarios usando ajax

--- a/templates/usuario/editar_usuario.html
+++ b/templates/usuario/editar_usuario.html
@@ -1,26 +1,20 @@
-{% extends 'index.html' %}
-{% block titulo %}
-  Edición de usuario
-{% endblock titulo %}
+<div class="modal-dialog modal-lg" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 class="modal-title">Edición de Usuario "{{object}}"</h2>
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <form id="form_edicion" action="{% url 'usuario:editar_usuario' object.id %}" method="POST">
+      {% csrf_token %}
+      <div class="modal-body">
+        {{ form.as_p }}
+      </div>
+      <div class="modal-footer">
+        <button id="boton_edicion" class="btn btn-primary" type="button" onclick="editar()">Confirmar</button>
+      </div>
 
-{% block titulo_principal %}
-Edición de Usuario
-{% endblock titulo_principal %}
-
-{% block body %}
-
-  <form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <a class="btn btn-secondary"  href="{% url 'usuario:listar_usuario' %}">Cancelar</a>
-    <button type="submit" class="btn btn-primary">Confirmar</button>
-
-  </form>
-
-  {% if error %}
-  <h2>Se ha producido un error:  {{error}}</h2>
-  {% endif %}
-
-
-
-{% endblock body %}
+    </form>
+  </div>
+</div>
