--- a/templates/usuario/listar_usuario.html
+++ b/templates/usuario/listar_usuario.html
@@ -39,6 +39,7 @@ Listado de Usuarios
   {% endif %}
 
   <div class="modal fade" id="creacion" role="dialog"></div>
+  <div class="modal fade" id="edicion" role="dialog"></div>
 
 
 
