Modificacion del metodo eliminar usuario para que acepte la eliminacion usando post y DeleteView con ajax

--- a/templates/usuario/listar_usuario.html
+++ b/templates/usuario/listar_usuario.html
@@ -40,6 +40,7 @@ Listado de Usuarios
 
   <div class="modal fade" id="creacion" role="dialog"></div>
   <div class="modal fade" id="edicion" role="dialog"></div>
+  <div class="modal fade" id="eliminacion" role="dialog"></div>
 
 
 
