Se agrego soporte para ajax a los módulos de Libro y Autor

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,14 +58,14 @@
                   <li class="menu-item-has-children dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Autores</a>
                       <ul class="sub-menu children dropdown-menu">
-                          <li><i class="fa fa-table"></i><a href="{% url 'libro:listar_autor' %}">Ver autores</a></li>
+                          <li><i class="fa fa-table"></i><a href="{% url 'libro:inicio_autor' %}">Ver autores</a></li>
 
                       </ul>
                   </li>
                   <li class="menu-item-has-children dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Libros</a>
                       <ul class="sub-menu children dropdown-menu">
-                          <li><i class="menu-icon fa fa-th"></i><a href="{% url 'libro:listar_libro' %}">Ver libros</a></li>
+                          <li><i class="menu-icon fa fa-th"></i><a href="{% url 'libro:inicio_libro' %}">Ver libros</a></li>
 
                       </ul>
                   </li>
