--- a/templates/libro/autor/editar_autor.html
+++ b/templates/libro/autor/editar_autor.html
@@ -15,7 +15,7 @@
         {{ form.as_p }}
       </div>
       <div class="modal-footer">
-        <button id="boton_edicion" class="btn btn-primary" type="submit">Confirmar</button>
+        <button id="boton_edicion" class="btn btn-primary" type="button" onclick="editar()">Confirmar</button>
       </div>
     </form>
   </div>
