--- a/templates/libro/libro/listar_libro.html
+++ b/templates/libro/libro/listar_libro.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load static %}
 {% block titulo %}
   Listado de libros
 {% endblock titulo %}
@@ -7,40 +8,28 @@
 Listado de libros
 {% endblock titulo_principal %}
 
+{% block extracss %}
+<link rel="stylesheet" href="//cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+{% endblock extracss %}
+  
 {% block body %}
-  {% if object_list %}
-      <table class="table table-striped table-bordered dataTable no-footer">
+  
+      <table class="table table-striped table-bordered dataTable no-footer" id="tabla_libros">
         <thead>
           <tr>
-            <th>ID</th>
             <th>Título</th>
-            <th>Autor(es)</th>
             <th>Fecha de publicación</th>
+            <th>Fecha de creación</th>
+            <th>¿Libro activo?</th>
+            <th>Autor(es)</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
-          {% for libro in object_list %}
-          <tr>
-            <td>{{libro.id}}</td>
-            <td>{{libro.titulo}}</td>
-            <td>
-                {% for autor in libro.autor_id.all %}
-                  <li><a onclick="abrir_modal_edicion('{% url 'libro:editar_autor' autor.id %}')">{{autor}}</a></li>
-                {% endfor %}
-            </td>
-            <td>{{libro.fecha_publicacion}}</td>
-            <td><button type="button" class="btn btn-primary" onclick="abrir_modal_edicion('{% url 'libro:editar_libro' libro.id %}')">Editar</button>
-            <a class="btn btn-danger" href="{% url 'libro:eliminar_libro' libro.id %}">Eliminar</a></td>
-          </tr>
-          {% endfor %}
         </tbody>
       </table>
-  {% else %}
-    <h3>No existen libros registrados</h3>
-
-  {% endif %}
-
+  
+      
   {% if error %}
     <div class="alert alert-danger" role="alert">
       {{error}}
@@ -60,7 +49,17 @@ Listado de libros
 
   </div>
 
+  <div class="modal fade" id="eliminacion" role="dialog">
+
+  </div>
 
 
 
 {% endblock body %}
+
+
+{% block extrajs %}
+  <script src="{% static 'js/libro/libro.js' %}"></script>
+  <script src="//cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+{% endblock extrajs %}
+  
