--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                       <a href="{% url 'index' %}"><i class="menu-icon fa fa-laptop"></i>Inicio </a>
                   </li>
                   <li class="menu-title">Opciones</li><!-- /.menu-title -->
-                  {% if request.user.is_staff %}
+                  {% if request.user.is_superuser %}
                   <li class="menu-item-has-children dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Usuarios</a>
                       <ul class="sub-menu children dropdown-menu">
@@ -53,7 +53,7 @@
 
                       </ul>
                   </li>
-                  {% endif %}
+                  
 
                   <li class="menu-item-has-children dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Autores</a>
@@ -69,7 +69,7 @@
 
                       </ul>
                   </li>
-
+                  {% endif %}      
 
               </ul>
           </div><!-- /.navbar-collapse -->
