--- a/templates/libro/libro/listar_libro.html
+++ b/templates/libro/libro/listar_libro.html
@@ -17,11 +17,13 @@ Listado de libros
       <table class="table table-striped table-bordered dataTable no-footer" id="tabla_libros">
         <thead>
           <tr>
+            <th>#</th>
             <th>Título</th>
+            <th>Descripción</th>
+            <th>Autor(es)</th>
+            <th>Stock</th>
             <th>Fecha de publicación</th>
             <th>Fecha de creación</th>
-            <th>¿Libro activo?</th>
-            <th>Autor(es)</th>
             <th>Acciones</th>
           </tr>
         </thead>
