Agrego vista detalle de libro

--- a/templates/libro/libro/libros_disponibles.html
+++ b/templates/libro/libro/libros_disponibles.html
@@ -15,13 +15,14 @@ Libros disponibles
 {% if object_list %}  
     <div class="row"> 
     {% for libro in object_list %}
-            <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{libro.imagen.url}}" alt="Card image cap">
+            <div class="col-md-4 col-sm-12">
+            <div class="card">
+                <img class="card-img-top" src="{{libro.imagen.url}}" alt="Card image cap" style="height: 18rem;">
                 <div class="card-body">
                 <h5 class="card-title">{{libro.titulo}}</h5>
-                <p class="card-text">{{libro.descripcion}}</p>
+                <p class="card-text" style="height: 10rem; overflow:hidden">{{libro.descripcion}}</p>
                 <a href="#" class="btn btn-primary">Reservar</a>
+                <button class="btn btn-default" onclick="abrir_modal_detalle('{% url 'libro:detalle_libro' libro.id %}')">Ver más</button>
                 </div>
             </div>
             </div>  
@@ -37,11 +38,13 @@ Libros disponibles
 {% endif %}
 
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="detalle" role="dialog"></div>
+
+
 {% endblock body %}
 
 
-{% block extrajs %}
-  <script src="{% static 'js/libro/libro.js' %}"></script>
-  <script src="//cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
-{% endblock extrajs %}
-  
+
+
