--- a/templates/libro/detalle_libro.html
+++ b/templates/libro/detalle_libro.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
+    <div class="modal-content container">
       <div class="modal-header">
         <h2 class="modal-title">{{object}}</h2>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
