--- a/templates/index.html
+++ b/templates/index.html
@@ -41,35 +41,31 @@
           <div id="main-menu" class="main-menu collapse navbar-collapse">
               <ul class="nav navbar-nav">
                   <li>
-                      <a href="{% url 'index' %}"><i class="menu-icon fa fa-laptop"></i>Inicio </a>
+                      <a href="{% url 'index' %}"><i class="menu-icon fa fa-home"></i>Inicio </a>
                   </li>
                   <li class="menu-title">Opciones</li><!-- /.menu-title -->
                   {% if request.user.is_superuser %}
-                  <li class="menu-item-has-children dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Usuarios</a>
-                      <ul class="sub-menu children dropdown-menu">
-                          <li><i class="fa fa-table"></i><a href="{% url 'usuario:listar_usuario' %}">Ver Usuarios</a></li>
-                          
-
-                      </ul>
-                  </li>
+                   <li>
+                       <a href="{% url 'usuario:listar_usuario' %}"><i class="menu-icon fa fa-users"></i>Administrar Usuarios</a>
+                    </li>
                   
+                    <li>
+                        
+                        <a href="{% url 'libro:inicio_autor' %}"><i class="menu-icon fa fa-table"></i>Administrar Autores</a>
+                    </li>
 
-                  <li class="menu-item-has-children dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Autores</a>
-                      <ul class="sub-menu children dropdown-menu">
-                          <li><i class="fa fa-table"></i><a href="{% url 'libro:inicio_autor' %}">Ver autores</a></li>
+                    
+                    <li>
+                        <a href="{% url 'libro:inicio_libro' %}"><i class="menu-icon fa fa-book"></i>Administrar libros</a>
+                    </li>
 
-                      </ul>
-                  </li>
-                  <li class="menu-item-has-children dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Libros</a>
-                      <ul class="sub-menu children dropdown-menu">
-                          <li><i class="menu-icon fa fa-th"></i><a href="{% url 'libro:inicio_libro' %}">Ver libros</a></li>
-
-                      </ul>
-                  </li>
+                    
+                    
+                    
                   {% endif %}      
+                  <li>
+                    <a href="{% url 'libro:mis_reservas' %}"><i class="menu-icon fa fa-bookmark"></i>Mis reservas </a>
+                </li>
 
               </ul>
           </div><!-- /.navbar-collapse -->
